<resources>
    <string name="app_name">Laser Tag Tracker</string>
    <string name="match_form_name_hint">Player name</string>
    <string name="match_form_score_hint">Player score</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_rank">Player Rank</string>
    <string name="precision">Precision</string>
    <string name="given_hits">Given Hits</string>
    <string name="chest">Chest</string>
    <string name="back">Back</string>
    <string name="shoulder">Shoulder</string>
    <string name="gun">Gun</string>
    <string name="received_hits">Received Hits</string>
    <string name="validate">Validate</string>
    <string name="team_score">Team Score</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordConf">Password Confirmation</string>
    <string name="player_stats">Player Stats</string>
    <string name="match_list">Match List</string>
    <string name="team_score_stats">Team Score Stats</string>
    <string name="given_received_stats">Given Received Stats</string>
    <string name="vs">VS</string>
    <string name="given_hits_vs_received_hits">Given Hits VS Received Hits</string>
    <string name="your_team_score">Your Team Score</string>
    <string name="your_score">Your Score</string>
    <string name="match">Match</string>
    <string name="passwordError">Passwords are not equals</string>
    <string name="usernameError">Invalid Username</string>
</resources>